spacing issues fixed

--- a/assets/pcl.css
+++ b/assets/pcl.css
@@ -342,7 +342,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -70px;
+    margin-top: -11px;
   }
   .trophy_beg2{
     display: flex;
